--- a/DefaultMessager/wwwroot/css/site.css
+++ b/DefaultMessager/wwwroot/css/site.css
@@ -20,3 +20,24 @@ html {
 body {
   margin-bottom: 60px;
 }
+body {
+    margin: 0px;
+}
+
+.post {
+    width: 100%;
+    height: auto;
+    background: #2D2F34;
+}
+
+.comment-btn {
+    width: 70px;
+    height: 100%;
+    background: none;
+    border: none;
+    outline: none;
+    text-transform: capitalize;
+    font-size: 16px;
+    color: rgb(0, 162, 255);
+    opacity: 0.5;
+}
