added all standart Controllers and standart view model for each entity

--- a/DefaultMessager/Views/Post/RandomPostIcons.cshtml
+++ b/DefaultMessager/Views/Post/RandomPostIcons.cshtml
@@ -1,5 +1,5 @@
 ﻿@using DefaultMessager.Domain.ViewModel.PostModel;
-@model IEnumerable<PostIconView>
+@model IEnumerable<PostIconViewModel>
 
 <div class="container-fluid">
     <div class="row">
