add registration and Authentication after registration with jwt token add Registration view

--- a/DefaultMessager/Views/Account/LogIn.cshtml
+++ b/DefaultMessager/Views/Account/LogIn.cshtml
@@ -8,7 +8,7 @@
 <p>welcome</p>
 <form method="post" asp-controller="Account" asp-action="LogIn">
     <div asp-validation-summary="All"></div>
-    <input asp-for="login" placeholder="login"type="text" />
-    <input asp-for="password" placeholder="password"type="text" />
+    <input asp-for="Login" placeholder="login"type="text" />
+    <input asp-for="Password" placeholder="password"type="text" />
     <button type="submit">send</button>
 </form>
