--- a/DefaultMessager/Views/Shared/_Layout.cshtml
+++ b/DefaultMessager/Views/Shared/_Layout.cshtml
@@ -26,13 +26,13 @@
                         <a href="#" class="nav-link">Messages</a>
                       </li>
                       <li class="nav-item">
-                        <a href="#" class="nav-link">Friends</a>
+                        <a  asp-controller="Account" asp-action="testStandart" class="nav-link">Friends</a>
                       </li>
                       <li class="nav-item">
-                        <a href="#" class="nav-link">Games</a>
+                        <a  asp-controller="Account" asp-action="testAdmin" class="nav-link">Games</a>
                       </li>
                       <li class="nav-item">
-                        <a href="#" class="nav-link">AnonChat</a>
+                        <a asp-controller="Account" asp-action="test" class="nav-link">AnonChat</a>
                       </li>
                   </ul>
               </div>
