--- a/DefaultMessager/Views/Account/LogIn.cshtml
+++ b/DefaultMessager/Views/Account/LogIn.cshtml
@@ -1,14 +1,55 @@
 ﻿@using DefaultMessager.Domain.ViewModel.AccountModel;
 @model LogInAccountViewModel
 @{
-    ViewData["Title"] = "log in";
+	ViewData["Title"] = "log in";
 }
-<h1>@ViewData["Title"]</h1>
+<section class="vh-100 my-2" style="background: #383B40">
+	<div class="container h-100">
+		<div class="row d-flex justify-content-center align-items-center h-100">
+			<div class="col-lg-12 col-xl-11 w-50">
+				<div class="card text-black bg-dark" style="border-radius: 25px;">
+					<div class="card-body py-5">
+						<div class="row justify-content-center">
+							<div class="col-md-10 col-lg-6 col-xl-5 order-2 order-lg-1">
 
-<p>welcome</p>
-<form method="post" asp-controller="Account" asp-action="LogIn">
-    <div asp-validation-summary="All"></div>
-    <input asp-for="Login" placeholder="login"type="text" />
-    <input asp-for="Password" placeholder="password"type="text" />
-    <button type="submit">send</button>
-</form>
+								<p class="text-center h1 fw-bold mb-3 mt-4 text-white">Login</p>
+
+								<form class="mx-0" method="post" asp-controller="Account" asp-action="LogIn">
+
+									<div class="d-flex flex-row align-items-center mb-4">
+										<div class="form-outline flex-fill mb-0">
+											<label class="form-label text-white" asp-for="Login">Login</label>
+											<input asp-for="Login" placeholder="Login" type="text" class="form-control" />
+										</div>
+									</div>
+
+									<div class="d-flex flex-row align-items-center mb-4">
+										<div class="form-outline flex-fill mb-0">
+											<label class="form-label text-white" asp-for="Password">Password</label>
+											<input asp-for="Password" placeholder="Password" type="password" class="form-control" />
+										</div>
+									</div>
+
+									<div class="d-flex justify-content-center mx-4 mb-1 mb-lg-4">
+										<button type="submit" class="btn btn-secondary btn-lg">Login</button>
+									</div>
+
+									<div class="">
+										<p class="text-center text-white mt-3 mb-0">
+											Don't have an account yet?
+											<br>
+											<a href="#!" class="fw-bold text-secondary"><u>Register here</u></a>
+										</p>
+									</div>
+
+								</form>
+
+							</div>
+
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+</section>
