--- a/DefaultMessager/Views/Shared/_Layout.cshtml
+++ b/DefaultMessager/Views/Shared/_Layout.cshtml
@@ -8,13 +8,16 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />    
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
+    
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/DefaultMessager.styles.css" asp-append-version="true" />
 </head>
 <body style="background: #383B40">
     <header>
-      <div class="navbar navbar-expand-sm navbar-dark bg-dark mb-3">
-          <div class="container">
+      <div class="navbar navbar-expand-sm navbar-dark bg-dark mb-0">
+          <div class="container" style="max-width: 100%;">
               <a href="" class="navbar-brand">DefaultMessanger</a>
               <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarContent" aria-controls="navbarContent" aria-expanded="false">
               <span class="navbar-toggler-icon"></span>
@@ -26,32 +29,43 @@
                         <a href="#" class="nav-link">Messages</a>
                       </li>
                       <li class="nav-item">
-                        <a  asp-controller="Account" asp-action="testStandart" class="nav-link">Friends</a>
+                        <a href="#" class="nav-link">Friends</a>
                       </li>
                       <li class="nav-item">
-                        <a  asp-controller="Account" asp-action="testAdmin" class="nav-link">Games</a>
+                        <a href="#" class="nav-link">Games</a>
                       </li>
                       <li class="nav-item">
-                        <a asp-controller="Account" asp-action="test" class="nav-link">AnonChat</a>
+                        <a class="nav-link" asp-controller="Account" asp-action="test">AnonChat</a>
                       </li>
                   </ul>
-              </div>
+              </div>                
+                @if (User.Identity is null || !User.Identity.IsAuthenticated)
+                {
+                    <div class="d-flex">
+                        <a class="btn btn-outline-secondary" asp-controller="Account" asp-action="LogIn">Log in</a>
+                        <a class="btn btn-outline-secondary ms-3" asp-controller="Account" asp-action="Registration">Register</a>
+                      </div>
+                }
           </div>
-          <img src="img/cover 1.png" class="rounded-circle me-auto" alt="avatar image" height="40" width="40">
-          <div class="collapse navbar-collapse" id="navbarNavDarkDropdown">
-              <ul class="navbar-nav" >
-                <li class="nav-item dropdown">
-                  <a class="nav-link dropdown-toggle" href="#" id="navbarDarkDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                    SashaKalennick
-                  </a>
-                  <ul class="dropdown-menu" aria-labelledby="navbarDarkDropdownMenuLink">
-                      <li><a class="dropdown-item" href="#">Profile</a></li>
-                      <li><a class="dropdown-item" href="#">Settings</a></li>
-                      <li><a class="dropdown-item text-danger" href="#">Sign out</a></li>
-                  </ul>
-                </li>
-              </ul>
-          </div>
+            @if (User.Identity is not null && User.Identity.IsAuthenticated)
+            {
+                <img src="@User.Identities.First().FindFirst("pathAvatar").Value" class="rounded-circle ms-auto ms-1" alt="avatar image" height="40" width="40">
+                <div class="collapse navbar-collapse" id="navbarNavDarkDropdown">
+                    <ul class="navbar-nav">
+                        <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            @User.Identity.Name
+                        </a>
+                        <ul class="dropdown-menu dropdown-menu-lg-end" aria-labelledby="navbarDarkDropdownMenuLink">
+                            <li><a class="dropdown-item">Profile</a></li>
+                            <li><a class="dropdown-item">Settings</a></li>
+                            <li><a class="dropdown-item text-danger" asp-controller="Account" asp-action="LogOut">Sign out</a></li>
+                        </ul>
+                        </li>
+                    </ul>
+                </div>
+            }
+            
       </div>
   </header
     <div class="container">
