add auto refresh jwt token with middleware added update function in repository and services

--- a/DefaultMessager/Views/Shared/_Layout.cshtml
+++ b/DefaultMessager/Views/Shared/_Layout.cshtml
@@ -32,7 +32,7 @@
                         <a href="#" class="nav-link">Friends</a>
                       </li>
                       <li class="nav-item">
-                        <a href="#" class="nav-link">Games</a>
+                        <a class="nav-link" asp-controller="Account" asp-action="testStandart">Games</a>
                       </li>
                       <li class="nav-item">
                         <a class="nav-link" asp-controller="Account" asp-action="test">AnonChat</a>
