--- a/DefaultMessager/Views/Shared/_Layout.cshtml
+++ b/DefaultMessager/Views/Shared/_Layout.cshtml
@@ -32,10 +32,10 @@
                         <a href="#" class="nav-link">Friends</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" asp-controller="Account" asp-action="testStandart">Games</a>
+                        <a class="nav-link">Games</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" asp-controller="Account" asp-action="test">AnonChat</a>
+                        <a class="nav-link">AnonChat</a>
                       </li>
                   </ul>
               </div>                
