--- a/DefaultMessager/wwwroot/css/site.css
+++ b/DefaultMessager/wwwroot/css/site.css
@@ -18,9 +18,6 @@ html {
 }
 
 body {
-  margin-bottom: 60px;
-}
-body {
     margin: 0px;
 }
 
@@ -28,6 +25,10 @@ body {
     width: 100%;
     height: auto;
     background: #2D2F34;
+}
+
+:root {
+    color-scheme: dark;
 }
 
 .comment-btn {
@@ -40,4 +41,13 @@ body {
     font-size: 16px;
     color: rgb(0, 162, 255);
     opacity: 0.5;
+}
+a {
+    color: rgb(0, 162, 255);
+    text-decoration: none;
+}
+
+a:hover {
+    color: rgb(0, 162, 255);
+    text-decoration: underline;
 }
