add infinity scroll to comments

--- a/DefaultMessager/Views/Shared/_Layout.cshtml
+++ b/DefaultMessager/Views/Shared/_Layout.cshtml
@@ -81,7 +81,8 @@
     <script src="~/js/modalWindow.js" asp-append-version="true"></script>
     
     <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
-    <script src="~/js/infinityScroll.js"></script>
+    <script src="~/js/infinityScrollPosts.js"></script>
+    <script src="~/js/infinityScrollComments.js"></script>
     <script src="~/js/modalWindow.js"></script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
