--- a/DefaultMessager/Views/Post/FullPost.cshtml
+++ b/DefaultMessager/Views/Post/FullPost.cshtml
@@ -1,4 +1,6 @@
-﻿@using DefaultMessager.Domain.Entities;
+﻿@using DefaultMessager.BLL.Implementation;
+@using DefaultMessager.Domain.Entities;
+@using DefaultMessager.Domain.Enums;
 @model Post
 
 <div class="modal-dialog modal-xl">
@@ -20,6 +22,7 @@
                         <p class="h6 ms-2 mt-2 text-white" style="display: inline-block">
                             <a class="text-white" asp-controller="Account" asp-action="Index" asp-route-accountId="@Model.Account.Id">@Model.Account.Login</a>
                         </p>
+                        <p id="postIdDiv" style="display:none">@Model.Id</p>
                         <p class="text-white">@Model.PostTextContent</p>
                         <svg xmlns="http://www.w3.org/2000/svg" width="27" height="27" fill="white" class="bi bi-heart my-2 ms-1 mt-1" viewBox="0 0 16 16">
                             <path d="m8 2.748-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01L8 2.748zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143c.06.055.119.112.176.171a3.12 3.12 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15z" />
@@ -27,17 +30,9 @@
                         <p class="h6 ms-2 mt-1 text-white" style="display: inline-block">@Model.Likes.Count likes</p>
                         <p class="h6 ms-3 mt-1 me-auto text-white" style="display: inline-block">@Model.SendDateTime.ToString()</p>
 
-                        <div class="overflow-y-scroll overflow-x-hidden text-white mt-2" style="width: 100%; height: 270px;">
-                            @foreach (var comment in Model.Comments)
-                            {
-                                <div class="row">
-                                    <p class="text-mute mb-2 h6 fw-bold">
-                                        <a class="text-white" asp-controller="Account" asp-action="Index" asp-route-accountId="@comment.Account.Id">@comment.Account.Login</a>
-                                    </p>
-                                    <p class="text-white mb-2" style="font-size: 11pt">@comment.CommentTextContent</p>
-                                    <p class="text-gray" style="font-size: 8pt">@comment.DatePublicate</p>
-                                </div>
-                            }
+                        <div class="overflow-y-auto overflow-x-hidden text-white mt-2" style="width: 100%; height: 270px;" onscroll="loadCommentItems()" 
+                            id="scrolCommentList">
+                            @await Html.PartialAsync("_comments",Model.Comments.Take(StandartConst.countCommentsOnOneLoad))
                         </div>
 
                         <input type="text" class="form-control mb-2 mt-3" placeholder="Add a comment" style="display: inline-block; width: 65%;" placeholder="Add a comment">
