--- a/DefaultMessager/Views/Post/FullPost.cshtml
+++ b/DefaultMessager/Views/Post/FullPost.cshtml
@@ -7,7 +7,7 @@
     <div class="modal-content bg-dark">
         <div class="modal-header">
             <h5 class="modal-title text-white" id="staticBackdropLabel">@Model.Title</h5>
-            <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Close"></button>
+            <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" onclick="page=0" aria-label="Close"></button>
         </div>
         <div class="modal-body" style="background: #383B40">
             <div class="container-fluid">
@@ -20,7 +20,7 @@
                     <div class="col-md-6 col-sm-12">
                         <img src="@Model.Account.Description.PathAvatar" class="rounded-circle me-auto ms-2 my-1 mb-2" alt="avatar image" height="25" width="25">
                         <p class="h6 ms-2 mt-2 text-white" style="display: inline-block">
-                            <a class="text-white" asp-controller="Account" asp-action="Index" asp-route-accountId="@Model.Account.Id">@Model.Account.Login</a>
+                            <a class="text-white" asp-controller="Account" asp-action="Index" asp-route-login="@Model.Account.Login">@Model.Account.Login</a>
                         </p>
                         <p id="postIdDiv" style="display:none">@Model.Id</p>
                         <p class="text-white">@Model.PostTextContent</p>
@@ -32,12 +32,11 @@
 
                         <div class="overflow-y-auto overflow-x-hidden text-white mt-2" style="width: 100%; height: 270px;" onscroll="loadCommentItems()" 
                             id="scrolCommentList">
-                            @await Html.PartialAsync("~/Views/Comment/_comments.cshtml",Model.Comments.Take(StandartConst.countCommentsOnOneLoad))
+                            @await Html.PartialAsync("~/Views/Comment/_comments.cshtml",Model.Comments.OrderByDescending(x=>x.DatePublicate).Take(StandartConst.countCommentsOnOneLoad))
                         </div>
-
-                        <input id="commentField" type="text" class="form-control mb-2 mt-3" placeholder="Add a comment" style="display: inline-block; width: 65%;" placeholder="Add a comment">
-                        <button type="button" class="btn btn-outline-dark text-white ms-3 mt-0" data-bs-toggle="modal" data-bs-target="#staticBackdrop" data-mdb-ripple-color="dark"
-                                style="z-index: 1;" >
+                        <input onkeydown="sndBtnClk()" id="commentField" type="text" class="form-control mb-2 mt-3" placeholder="Add a comment" style="display: inline-block; width: 65%;" placeholder="Add a comment">
+                        <button id="sndCommBtn" type="button" class="btn btn-outline-dark text-white ms-3 mt-0" data-bs-toggle="modal" data-bs-target="#staticBackdrop" data-mdb-ripple-color="dark"
+                                style="z-index: 1;" onclick="CreateCommentOnPost({url:'/Comment/SendComment',data:'@Model.Id'})">
                             Add a comment
                         </button>
                     </div>
