--- a/DefaultMessager/Views/Post/FullPost.cshtml
+++ b/DefaultMessager/Views/Post/FullPost.cshtml
@@ -24,10 +24,12 @@
                         </p>
                         <p id="postIdDiv" style="display:none">@Model.Id</p>
                         <p class="text-white">@Model.PostTextContent</p>
-                        <svg xmlns="http://www.w3.org/2000/svg" width="27" height="27" fill="white" class="bi bi-heart my-2 ms-1 mt-1" viewBox="0 0 16 16">
-                            <path d="m8 2.748-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01L8 2.748zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143c.06.055.119.112.176.171a3.12 3.12 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15z" />
-                        </svg>
-                        <p class="h6 ms-2 mt-1 text-white" style="display: inline-block">@Model.Likes.Count likes</p>
+                        <div id="LikeCount" onclick="ChengeLike({data:'@Model.Id'})">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="27" height="27" fill="white" class="bi bi-heart my-2 ms-1 mt-1" viewBox="0 0 16 16">
+                                <path d="m8 2.748-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01L8 2.748zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143c.06.055.119.112.176.171a3.12 3.12 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15z" />
+                            </svg>
+                            <p class="h6 ms-2 mt-1 text-white" style="display: inline-block">@Model.Likes.Count likes</p>
+                        </div>
                         <p class="h6 ms-3 mt-1 me-auto text-white" style="display: inline-block">@Model.SendDateTime.ToString()</p>
 
                         <div class="overflow-y-auto overflow-x-hidden text-white mt-2" style="width: 100%; height: 270px;" onscroll="loadCommentItems()" 
@@ -45,3 +47,6 @@
         </div>
     </div>
 </div>
+<script>
+    GetLikes({data:'@Model.Id'});
+</script>
