--- a/DefaultMessager/Views/Shared/_Layout.cshtml
+++ b/DefaultMessager/Views/Shared/_Layout.cshtml
@@ -83,7 +83,7 @@
     <script src="~/js/infinityScrollPosts.js"></script>
     <script src="~/js/infinityScrollComments.js"></script>
     <script src="~/js/modalWindow.js"></script>
-    <script src="~/js/CreateComments.js"></script>
+    <script src="~/js/CreateEntity.js"></script>
     <script src="~/js/LikeControl.js"></script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
