--- a/DefaultMessager/Views/Post/_createPost.cshtml
+++ b/DefaultMessager/Views/Post/_createPost.cshtml
@@ -22,7 +22,7 @@
                 </div>
                 <div class="mb-3">
                     <label for="formFile" class="form-label text-white">Choose photo</label>
-                    <input asp-for="FormFiles" class="form-control bg-secondary text-white" type="file" id="formFile">
+                    <input asp-for="FormFiles" class="form-control bg-secondary text-white" type="file" id="inputField">
                 </div>
                 <button type="submit" class="btn btn-outline-secondary text-white">Add</button>
             </form>
