--- a/DefaultMessager/wwwroot/css/site.css
+++ b/DefaultMessager/wwwroot/css/site.css
@@ -51,3 +51,16 @@ a:hover {
     color: rgb(0, 162, 255);
     text-decoration: underline;
 }
+#dropZone {
+    background: rgba(102,74,0,.8);
+    bottom: 0;
+    color: #fff;
+    left: 0;
+    padding-top: 45vh;
+    position: fixed;
+    right: 0;
+    text-align: center;
+    top: 0;
+    z-index: 6000;
+    display: none;
+}
