--- a/DefaultMessager/Views/Post/PostsIconsWithOneOwner.cshtml
+++ b/DefaultMessager/Views/Post/PostsIconsWithOneOwner.cshtml
@@ -3,7 +3,7 @@
 @model IEnumerable<PostIconViewModel>
 <div class="navbar navbar-secondary">
     <p class="h2 mt-2 ms-4 text-white">Posts</p>
-    @if (true)@*Model.FirstOrDefault() != null && Model.First().AccountViewModel.Login == User.Identity.Name*@
+    @if (Model.FirstOrDefault() != null && Model.First().AccountViewModel.Login == User.Identity.Name)
     {
         <svg onclick="OpenCreatePostModelWindow({url:'/Post/CreatePost'})" xmlns="http://www.w3.org/2000/svg" width="35" height="35" fill="white" data-bs-target="#AddPost" class="bi bi-plus-circle-fill me-4" viewBox="0 0 16 16">
             <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM8.5 4.5a.5.5 0 0 0-1 0v3h-3a.5.5 0 0 0 0 1h3v3a.5.5 0 0 0 1 0v-3h3a.5.5 0 0 0 0-1h-3v-3z" />
@@ -15,4 +15,10 @@
     <div class="modal fade" id="modal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
 
     </div>
+}
+@if (Model.FirstOrDefault() != null)
+{
+    <script>
+        setScrollEvent({ accountId: '@Model.First().AccountViewModel.Id' })
+    </script>
 }
