--- a/DefaultMessager/Views/Shared/_Layout.cshtml
+++ b/DefaultMessager/Views/Shared/_Layout.cshtml
@@ -68,18 +68,12 @@
             }
             
       </div>
-  </header
-    <div class="container">
-        <main role="main" class="pb-3">
-            @RenderBody()
-        </main>
-    </div>
-    @RenderSection("modalWindow",false)
-    @RenderSection("dropZone",false)
+  </header>
+
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
-    
+
     <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
     <script src="~/js/infinityScrollPosts.js"></script>
     <script src="~/js/infinityScrollComments.js"></script>
@@ -87,6 +81,13 @@
     <script src="~/js/CreateEntity.js"></script>
     <script src="~/js/LikeControl.js"></script>
     <script src="~/js/DropZone.js"></script>
+    <div class="">
+        <main role="main" class="pb-3">
+            @RenderBody()
+        </main>
+    </div>
+    @RenderSection("modalWindow",false)
+    @RenderSection("dropZone",false)
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
