--- a/DefaultMessager/Views/Account/Index.cshtml
+++ b/DefaultMessager/Views/Account/Index.cshtml
@@ -52,6 +52,12 @@
                         <!-- Albums -->
                         <div class="d-flex justify-content-between align-items-center mb-4">
                             <p class="lead fw-normal mb-0">Albums</p>
+                            @if(User.Identity.Name==Model.Login)
+                            {
+                                <svg  xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="white" data-bs-toggle="modal" data-bs-target="#AddPost" class="bi bi-plus-circle-fill ms-2 mt-1 me-auto" viewBox="0 0 16 16">
+                                    <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM8.5 4.5a.5.5 0 0 0-1 0v3h-3a.5.5 0 0 0 0 1h3v3a.5.5 0 0 0 1 0v-3h3a.5.5 0 0 0 0-1h-3v-3z"/>
+                                </svg>   
+                            }
                             <p class="mb-0"><a href="#!" class="text-white">Show all</a></p>
                         </div>
                         <div class="row">
@@ -68,6 +74,12 @@
                         <!-- Posts -->
                         <div class="d-flex justify-content-between align-items-center mb-4">
                             <p class="lead fw-normal mb-0 mt-2">Posts</p>
+                            @if(User.Identity.Name==Model.Login)
+                            {
+                                <svg onclick="OpenCreatePostModelWindow({url:'/Post/CreatePost'})" xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="white" data-bs-toggle="modal" data-bs-target="#AddPost" class="bi bi-plus-circle-fill ms-2 mt-1 me-auto" viewBox="0 0 16 16">
+                                    <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM8.5 4.5a.5.5 0 0 0-1 0v3h-3a.5.5 0 0 0 0 1h3v3a.5.5 0 0 0 1 0v-3h3a.5.5 0 0 0 0-1h-3v-3z"/>
+                                </svg>   
+                            }
                             <p class="mb-0"><a asp-action="PostsIconsWithOneOwner" asp-controller="Post" asp-route-accountId="@Model.Id" class="text-white">Show all</a></p>
                         </div>
                         <div class="row">
