--- a/DefaultMessager/Views/Comment/_comments.cshtml
+++ b/DefaultMessager/Views/Comment/_comments.cshtml
@@ -2,11 +2,12 @@
 @model IEnumerable<Comment>
 @foreach (var comment in Model)
 {
-        <div class="row">
-            <p class="text-mute mb-2 h6 fw-bold">
-            <a class="text-white" asp-controller="Account" asp-action="Index" asp-route-login="@comment.Account.Login">@comment.Account.Login</a>
-            </p>
-            <p class="text-white mb-2" style="font-size: 11pt">@comment.CommentTextContent</p>
-            <p class="text-gray" style="font-size: 8pt">@comment.DatePublicate</p>
-        </div>
+    <div class="row">
+        <p class="text-mute mb-2 h6 fw-bold">
+        <a class="text-white" asp-controller="Account" asp-action="Index" asp-route-login="@comment.Account.Login">@comment.Account.Login</a>
+        </p>
+        <p class="text-white mb-2" style="font-size: 11pt">@comment.CommentTextContent</p>
+        <p class="text-gray" style="font-size: 8pt">@comment.DatePublicate</p>
+    </div>
+    <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center mb-1 mt-1 border-bottom"></div>
 }
