add infinity scroll and delete functional on Image album

--- a/DefaultMessager/Views/Post/PostsIconsWithOneOwner.cshtml
+++ b/DefaultMessager/Views/Post/PostsIconsWithOneOwner.cshtml
@@ -19,6 +19,6 @@
 @if (Model.FirstOrDefault() != null)
 {
     <script>
-        setScrollEvent({ accountId: '@Model.First().AccountViewModel.Id' })
+        setPostScrollEvent({ accountId: '@Model.First().AccountViewModel.Id' })
     </script>
 }
