--- a/DefaultMessager/Views/Account/Index.cshtml
+++ b/DefaultMessager/Views/Account/Index.cshtml
@@ -58,7 +58,7 @@
                                     <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM8.5 4.5a.5.5 0 0 0-1 0v3h-3a.5.5 0 0 0 0 1h3v3a.5.5 0 0 0 1 0v-3h3a.5.5 0 0 0 0-1h-3v-3z"/>
                                 </svg>   
                             }
-                            <p class="mb-0"><a href="#!" class="text-white">Show all</a></p>
+                            <p class="mb-0"><a asp-action="ImageAlbumsWithOneOwner" asp-controller="ImageAlbum" asp-route-accountId="@Model.Id" class="text-white">Show all</a></p>
                         </div>
                         <div class="row">
                             @foreach (var item in Model.ImageAlbums)
