add image album photo view

--- a/DefaultMessager/Views/ImageAlbum/ImageAlbumsWithOneOwner.cshtml
+++ b/DefaultMessager/Views/ImageAlbum/ImageAlbumsWithOneOwner.cshtml
@@ -17,7 +17,7 @@
         @await Html.PartialAsync("_imageAlbums")
     </div>
     <div id="loading">
-        <img src='@Url.Content(StandartPath.loadGif)'>
+        <img src='@Url.Content(StandartPath.loadGif)' style="display:none">
     </div>
 </div>
 @section modalWindow {
