--- a/DefaultMessager/Views/Shared/_Layout.cshtml
+++ b/DefaultMessager/Views/Shared/_Layout.cshtml
@@ -77,6 +77,7 @@
     <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
     <script src="~/js/infinityScrollPosts.js"></script>
     <script src="~/js/infinityScrollImageAlbum.js"></script>
+    <script src="~/js/infinityScrollImageAlbumPhoto.js"></script>
     <script src="~/js/infinityScrollComments.js"></script>
     <script src="~/js/modalWindow.js"></script>
     <script src="~/js/CreateEntity.js"></script>
