--- a/DefaultMessager/Views/ImageAlbum/_imageAlbums.cshtml
+++ b/DefaultMessager/Views/ImageAlbum/_imageAlbums.cshtml
@@ -8,13 +8,20 @@
             <div class="container holder bg-dark mb-0" style="width: 100%; height: 200px; padding: 0;">
                 <img src="@item.PathPictures.FirstOrDefault().ToString()" class="object-fit-scale" style="width: 100%; height: 100%;" alt="">
                 <div class="container block bg-dark mb-0" style="width: 100%; height: 200px; padding: 0; opacity: 80%; margin: 0;">
-                    <div class="d-flex justify-content-end me-2">
-                        <svg onclick="OpenDeleteImageAlbumModelWindow({url:'/ImageAlbum/DeleteImageAlbumForm',data:'@item.Id'})" xmlns="http://www.w3.org/2000/svg" data-bs-target="#DeleteAlbum" width="24" height="24" fill="white" class="bi bi-x-lg mt-1 ms-1" viewBox="0 0 16 16">
-                            <path d="M2.146 2.854a.5.5 0 1 1 .708-.708L8 7.293l5.146-5.147a.5.5 0 0 1 .708.708L8.707 8l5.147 5.146a.5.5 0 0 1-.708.708L8 8.707l-5.146 5.147a.5.5 0 0 1-.708-.708L7.293 8 2.146 2.854Z" />
-                        </svg>
-                    </div>
+                    @if (User.Identity.Name==item.Account.Login)
+                    {
+                        <div class="d-flex justify-content-end me-2">
+                            <svg onclick="OpenDeleteImageAlbumModelWindow({url:'/ImageAlbum/DeleteImageAlbumForm',data:'@item.Id'})" xmlns="http://www.w3.org/2000/svg" data-bs-target="#DeleteAlbum" width="24" height="24" fill="white" class="bi bi-x-lg mt-1 ms-1" viewBox="0 0 16 16">
+                                <path d="M2.146 2.854a.5.5 0 1 1 .708-.708L8 7.293l5.146-5.147a.5.5 0 0 1 .708.708L8.707 8l5.147 5.146a.5.5 0 0 1-.708.708L8 8.707l-5.146 5.147a.5.5 0 0 1-.708-.708L7.293 8 2.146 2.854Z" />
+                            </svg>
+                        </div>
+                    }
                     <div class="d-flex justify-content-center mt-4">
-                        <p class="h5 text-white mt-4">@item.Title</p>
+                        <p class="h5 text-white mt-4">
+                            <a asp-action="PhotoOfAlbum" asp-controller="ImageAlbum" asp-route-imageAlbumId="@item.Id" class="text-white">
+                                @item.Title
+                            </a>
+                        </p>
                     </div>
                 </div>
             </div>
