--- a/DefaultMessager/Views/ImageAlbum/PhotoOfAlbum.cshtml
+++ b/DefaultMessager/Views/ImageAlbum/PhotoOfAlbum.cshtml
@@ -4,14 +4,13 @@
     <p class="h2 mt-2 ms-4 text-white">Album photo</p>
     @if (Model.Item2)
     {
-        <form name="inputFileForm" method="post" class="d-flex justify-content-center" enctype="multipart/form-data" action="/ConvertedImage" style="z-index: 1;">
+        <form asp-action="AddPhotoToImageAlbum" asp-route-imageAlbumId="@Model.Item3" asp-controller="ImageAlbum" name="inputPhotoFileIntoAlbumForm" method="post" class="d-flex justify-content-center" enctype="multipart/form-data" style="z-index: 1;">
             <label for="inputField" class="me-4" style="cursor: pointer; width: 35px;" name="inputField">
                 <svg xmlns="http://www.w3.org/2000/svg" width="35" height="35" fill="white" class="bi bi-plus-circle-fill me-4" viewBox="0 0 16 16">
                     <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM8.5 4.5a.5.5 0 0 0-1 0v3h-3a.5.5 0 0 0 0 1h3v3a.5.5 0 0 0 1 0v-3h3a.5.5 0 0 0 0-1h-3v-3z" />
                 </svg>
             </label>
-            <input name="inputField" hidden id="inputField" onchange="" accept=".jpg, .png, .jpeg, .gif, .bmp, .tif, .tiff|image/*" type="file" required="">
-            <input name="__RequestVerificationToken" type="hidden" value="CfDJ8Bbf3ysSRuxJrP5nc99BeooF-OX-24kDnRner_btTfMy31vMI8mq-XW1h1vhpdtPtpbqSBTO10kD8j2kfQvrUecHBuAD7Uo1CpgpJAKQ_rmgV5cpKGfC4fkIevhYkuiFMWxif2urRLDkYrZmg2ax6KY">
+            <input name="inputField" onchange="SubmitForm(this,'inputPhotoFileIntoAlbumForm');" hidden id="inputField" accept=".jpg, .png, .jpeg, .gif, .bmp, .tif, .tiff|image/*" type="file" required="">
         </form>   
     }
 </div>
