--- a/DefaultMessager/Views/Shared/_Layout.cshtml
+++ b/DefaultMessager/Views/Shared/_Layout.cshtml
@@ -73,6 +73,7 @@
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/microsoft-signalr/6.0.1/signalr.js"></script>
 
     <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
     <script src="~/js/infinityScrollPosts.js"></script>
@@ -82,6 +83,7 @@
     <script src="~/js/modalWindow.js"></script>
     <script src="~/js/CreateEntity.js"></script>
     <script src="~/js/LikeControl.js"></script>
+    <script src="~/js/CommentControl.js"></script>
     <script src="~/js/DropZone.js"></script>
     <div class="">
         <main role="main" class="pb-3">
