--- a/DefaultMessager/Views/Shared/_Layout.cshtml
+++ b/DefaultMessager/Views/Shared/_Layout.cshtml
@@ -27,7 +27,7 @@
               <div class="collapse navbar-collapse" id="navbarContent">
                   <ul class="navbar-nav me-auto mb-2">
                       <li class="nav-item">
-                        <a href="#" class="nav-link">Messages</a>
+                        <a asp-controller="Chatting" asp-action="Index" class="nav-link">Messages</a>
                       </li>
                       <li class="nav-item">
                         <a href="#" class="nav-link">Friends</a>
