--- a/DefaultMessager/Views/Chatting/_messagesBetween.cshtml
+++ b/DefaultMessager/Views/Chatting/_messagesBetween.cshtml
@@ -1,13 +1,30 @@
-﻿@using DefaultMessager.Domain.ViewModel.MessageModel;
+﻿@using DefaultMessager.Domain.Enums;
+@using DefaultMessager.Domain.ViewModel.MessageModel;
 @model IEnumerable<MessageViewModel>
+@{
+    var userId = new Guid(User.Identities.First().FindFirst(CustomClaimType.AccountId).Value);
+}
 
 @foreach(var mess in Model)
 {
     <div class="row">
         <div class="col-md-12">
-            <div class="container text-white rounded-pill float-start ms-1 mt-1" style="width: fit-content; background: DimGray;">
-                <p class="text-white" style="margin-bottom: 0;">@mess.MessageTextContent</p>
-            </div>
+            @if (userId == mess.RecieveId)
+            {
+                <div class="container text-white rounded-pill float-start ms-1 mt-1" style="width: fit-content; background: DimGray;">
+                    <p class="text-white" style="margin-bottom: 0;">
+                        @mess.MessageTextContent
+                    </p>
+                </div>
+            }
+            else
+            {
+                <div class="container text-white rounded-pill float-end ms-1 mt-1" style="width: fit-content; background: LightSlateGray;">
+                    <p class="text-white" style="margin-bottom: 0;">
+                        @mess.MessageTextContent
+                    </p>
+                </div>
+            }
         </div>
     </div>
 }
