--- a/DefaultMessager/Views/Shared/_Layout.cshtml
+++ b/DefaultMessager/Views/Shared/_Layout.cshtml
@@ -80,7 +80,12 @@
     <script src="~/js/infinityScrollImageAlbum.js"></script>
     <script src="~/js/infinityScrollImageAlbumPhoto.js"></script>
     <script src="~/js/infinityScrollComments.js"></script>
-    <script src="~/js/modalWindow.js"></script>
+    <script src="~/js/infinityScrollMessages.js"></script>
+    <script src="
+
+
+
+/js/modalWindow.js"></script>
     <script src="~/js/CreateEntity.js"></script>
     <script src="~/js/LikeControl.js"></script>
     <script src="~/js/CommentControl.js"></script>
