--- a/DefaultMessager/Views/Shared/_Layout.cshtml
+++ b/DefaultMessager/Views/Shared/_Layout.cshtml
@@ -81,6 +81,7 @@
     <script src="~/js/infinityScrollImageAlbumPhoto.js"></script>
     <script src="~/js/infinityScrollComments.js"></script>
     <script src="~/js/infinityScrollMessages.js"></script>
+    <script src="~/js/infinityScrollConpanionList.js"></script>
     <script src="
 
 
