--- a/DefaultMessager/Views/Chatting/_accountChatList.cshtml
+++ b/DefaultMessager/Views/Chatting/_accountChatList.cshtml
@@ -13,4 +13,5 @@
             </div>
         </div>
     </div>
+    <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center mb-1 mt-1 border-bottom"></div>
 }
