--- a/DefaultMessager/Views/Shared/_Layout.cshtml
+++ b/DefaultMessager/Views/Shared/_Layout.cshtml
@@ -82,14 +82,10 @@
     <script src="~/js/infinityScrollComments.js"></script>
     <script src="~/js/infinityScrollMessages.js"></script>
     <script src="~/js/infinityScrollConpanionList.js"></script>
-    <script src="
-
-
-
-/js/modalWindow.js"></script>
+    <script src="~/js/modalWindow.js"></script>
     <script src="~/js/CreateEntity.js"></script>
     <script src="~/js/LikeControl.js"></script>
-    <script src="~/js/CommentControl.js"></script>
+    <script src="~/js/EntityControl.js"></script>
     <script src="~/js/DropZone.js"></script>
     <div class="">
         <main role="main" class="pb-3">
