--- a/DefaultMessager/Views/Chatting/_accountChatList.cshtml
+++ b/DefaultMessager/Views/Chatting/_accountChatList.cshtml
@@ -4,11 +4,11 @@
 @foreach(var acc in Model)
 {
     <div class="row bg-secondary">
-        <div class="col-md-12">
-            <div class="navbar navbar-secondary">
-                <a class="navbar-brand">
+        <div class="col-md-12" >
+            <div class="navbar navbar-secondary" onclick="GetCompanion({accountId:'@acc.Id'}); GetCorrespondence({accountId:'@acc.Id'})">
+                <a class="navbar-brand" style="text-decoration:none">
                     <img src="@acc.PathAvatar.PathAvatar" class="rounded-circle me-1" alt="avatar image" height="42" width="42">
-                    <a>@acc.Login</a>
+                    @acc.Login
                 </a>
             </div>
         </div>
