fix infinity scroll on message and create message Functional

--- a/DefaultMessager/Views/Shared/_Layout.cshtml
+++ b/DefaultMessager/Views/Shared/_Layout.cshtml
@@ -19,7 +19,7 @@
     <header>
       <div class="navbar navbar-expand-sm navbar-dark bg-dark mb-0">
           <div class="container" style="max-width: 100%;">
-              <a href="" class="navbar-brand">DefaultMessanger</a>
+              <a asp-controller="Home" asp-action="Index" class="navbar-brand">DefaultMessanger</a>
               <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarContent" aria-controls="navbarContent" aria-expanded="false">
               <span class="navbar-toggler-icon"></span>
               </button>
@@ -80,7 +80,6 @@
     <script src="~/js/infinityScrollImageAlbum.js"></script>
     <script src="~/js/infinityScrollImageAlbumPhoto.js"></script>
     <script src="~/js/infinityScrollComments.js"></script>
-    <script src="~/js/infinityScrollMessages.js"></script>
     <script src="~/js/infinityScrollConpanionList.js"></script>
     <script src="~/js/modalWindow.js"></script>
     <script src="~/js/CreateEntity.js"></script>
