--- a/DefaultMessager/wwwroot/css/site.css
+++ b/DefaultMessager/wwwroot/css/site.css
@@ -82,3 +82,12 @@ a:hover {
 .holder:hover .block {
     display: block;
 }
+
+
+.outer {
+    overflow: auto;
+}
+
+.outer, .inner {
+    transform: scaleY(-1);
+}
