--- a/DefaultMessager/Views/Chatting/Index.cshtml
+++ b/DefaultMessager/Views/Chatting/Index.cshtml
@@ -23,7 +23,7 @@
 
         <div class="col-md-8 bg-secondary" style="height: 80vh;">
             <div class="row">
-                <div class="col-md-12 bg-dark overflow-auto scr" style="height: 73vh;" id="scrolMessageList" onscroll="loadMessageItems()">
+                <div class="col-md-12 bg-dark overflow-auto scr" style="height: 73vh;" id="scrolMessageList">
                     @await Html.PartialAsync("_messagesBetween",Model.MessageOfCurrentCorrespondenceViewModels)
                 </div>
                 <div id="loading">
@@ -35,9 +35,9 @@
                 <div class="col-md-12 bg-dark" style="height: 7vh;">
                     <div class="input-group mt-2 mb-2">
                         <button class="btn btn-outline-light" type="button" id="button-addon1">+</button>
-                        <input type="text" class="form-control" placeholder="" style="display: inline-block; width: 65%;" aria-label="Example text with button addon" aria-describedby="button-addon1">
-                        <button type="button" class="btn btn-outline-dark text-white ms-3 mt-0" data-bs-toggle="modal" data-bs-target="#staticBackdrop" data-mdb-ripple-color="dark"
-                                style="z-index: 1;">
+                        <input onkeydown="sndBtnClk('sndMessBtn')" id="messageField" type="text" class="form-control" placeholder="" style="display: inline-block; width: 65%;" aria-label="Example text with button addon" aria-describedby="button-addon1">
+                        <button id="sndMessBtn" type="button" class="btn btn-outline-dark text-white ms-3 mt-0" data-mdb-ripple-color="dark"
+                                style="z-index: 1;" onclick="CreateMessage({url:'/Message/SendMessage'});">
                             Send a message
                         </button>
                     </div>
@@ -46,3 +46,4 @@
         </div>
     </div>
 </div>
+    <script src="~/js/infinityScrollMessages.js"></script>
