--- a/DefaultMessager/Views/Chatting/_companion.cshtml
+++ b/DefaultMessager/Views/Chatting/_companion.cshtml
@@ -2,6 +2,7 @@
 @model AccountIconViewModel
 <div id="compId" style="display:none">@Model.Id</div>
 <a class="navbar-brand text-white fs-5">
-    <img src="@Model.PathAvatar.PathAvatar" class="rounded-circle me-1" alt="avatar image" height="30" width="30">
+    <img src="@Model.PathAvatar.PathAvatar" onload="startSignalR()" class="rounded-circle me-1" alt="avatar image" height="30" width="30">
     <a class="text-white" asp-controller="Account" asp-action="Index" asp-route-login="@Model.Login">@Model.Login</a>
 </a>   
+<p id="UserName" style="display:none">@User.Identity.Name</p>
