--- a/DefaultMessager/Views/Chatting/_accountChatList.cshtml
+++ b/DefaultMessager/Views/Chatting/_accountChatList.cshtml
@@ -1,11 +1,11 @@
 ﻿@using DefaultMessager.Domain.ViewModel.AccountModel;
 @model IEnumerable<AccountIconViewModel>
-
+<script>GetRelationId({ companionId: '@Model.FirstOrDefault().Id' });</script>
 @foreach(var acc in Model)
 {
     <div class="row bg-secondary">
         <div class="col-md-12" >
-            <div class="navbar navbar-secondary" onclick="GetCompanion({accountId:'@acc.Id'}); GetCorrespondence({accountId:'@acc.Id'}); cleanPage()">
+            <div class="navbar navbar-secondary" onclick="GetCompanion({accountId:'@acc.Id'}); GetCorrespondence({accountId:'@acc.Id'}); cleanPage();GetRelationId({companionId:'@acc.Id'});">
                 <a class="navbar-brand" style="text-decoration:none">
                     <img src="@acc.PathAvatar.PathAvatar" class="rounded-circle me-1" alt="avatar image" height="42" width="42">
                     @acc.Login
